--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -7,10 +7,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/dashboard/students">Students</a>
+            <a class="nav-link" routerLink="/dashboard/students">Estudiantes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/dashboard/teachers">Teachers</a>
+            <a class="nav-link" routerLink="/dashboard/teachers">Profesores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/dashboard/grades">Cursos</a>
           </li>
         </ul>
       </div>
